// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-titleGridContainer-6 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item makeStyles-titleGridItem-8"
      >
        <h6
          class="MuiTypography-root makeStyles-titleRoot-9 MuiTypography-body1 MuiTypography-alignCenter"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root makeStyles-descriptionRoot-2 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Button Title
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-10"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-titleGridContainer-15 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item makeStyles-titleGridItem-17"
      >
        <h6
          class="MuiTypography-root makeStyles-titleRoot-18 MuiTypography-body1 MuiTypography-alignCenter"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root makeStyles-descriptionRoot-11 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Button Title
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-19"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-titleGridContainer-24 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item makeStyles-titleGridItem-26"
      >
        <h6
          class="MuiTypography-root makeStyles-titleRoot-27 MuiTypography-body1 MuiTypography-alignCenter"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root makeStyles-descriptionRoot-20 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-disableElevation"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Button Title
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
